@@ -7,7 +7,6 @@ import com.android.tools.lint.detector.api.Issue;
 
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -29,7 +28,7 @@ public final class LibXposedIssueRegistry extends IssueRegistry {
     @NotNull
     @Override
     public List<Issue> getIssues() {
-        return Collections.singletonList(SinceApiDetector.ISSUE);
+        return List.of(SinceApiDetector.ISSUE, InternalApiDetector.ISSUE);
     }
 
     @Override
